# hermes-memorykit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
configs/: memory-stack.env.example
docs/: architecture.md  implementation-guide.md  skills-and-memory.md
plugins/hermes_memory_stack/: __init__.py  plugin.yaml
scripts/: install_hermes_plugin.py
social/: x-post.md
tests/: test_hermes_plugin_wrapper.py
