[project]
name = "hermes-memorykit"
version = "0.2.0"
description = "Hermes MemoryKit: a layered memory stack implementation kit for Hermes Agent"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
